...
	const router = useRouter();
	const { signIn } = useSession();
	const { t } = useLocalization();

	async function handleRegister() {			
		const validations = {
			Username: username.length < 3,
			Password: password.length < 6,
			Email: !email.includes('@'),
		};

		if (Object.values(validations).some(invalid => invalid)) {
			let error = 'application.auth.register.registerError';
			const errorKeys = Object.entries(validations)
...
